--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,7 +2,7 @@
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://renanpilotti.github.io/lista-de-compras",
+  "homepage": "https://github.com/renanpilotti/lista-de-compras/tree/main/front-end",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
